--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="https://blogger.googleusercontent.com/img/a/AVvXsEhh2P-tTMhp0vGmNcKxbE4A6XSgBm9JMWWXjMSqYdUMcvmGB0DIEZHdy_epUGjzd6Z18SePTlcCFErMdCjcLxJQcI9WVdNDUphs1EBuYtkgxzTygpYDiqOhCGE5MXHimXBTedfYRKCTPueNV1EmfbmQVvCwowW_btx9Z19_2IcPkEi4e-MHYR5yAM5A-Zo" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>secret-santa</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
@@ -11,8 +11,10 @@
 
     <!-- fonts  -->
      <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
+  
+    <!-- <link rel="icon" href="https://blogger.googleusercontent.com/img/a/AVvXsEhh2P-tTMhp0vGmNcKxbE4A6XSgBm9JMWWXjMSqYdUMcvmGB0DIEZHdy_epUGjzd6Z18SePTlcCFErMdCjcLxJQcI9WVdNDUphs1EBuYtkgxzTygpYDiqOhCGE5MXHimXBTedfYRKCTPueNV1EmfbmQVvCwowW_btx9Z19_2IcPkEi4e-MHYR5yAM5A-Zo" type="image/x-icon"> -->
   </head>
   <body>
     
