--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="https://blogger.googleusercontent.com/img/a/AVvXsEhh2P-tTMhp0vGmNcKxbE4A6XSgBm9JMWWXjMSqYdUMcvmGB0DIEZHdy_epUGjzd6Z18SePTlcCFErMdCjcLxJQcI9WVdNDUphs1EBuYtkgxzTygpYDiqOhCGE5MXHimXBTedfYRKCTPueNV1EmfbmQVvCwowW_btx9Z19_2IcPkEi4e-MHYR5yAM5A-Zo" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>secret-santa</title>
+    <title>ZenSanta</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
